--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html, 
+body, 
+div#root {
+    width: 100%;
+    height: 100vh;
+    background-color: #1b1b1d;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*::-webkit-scrollbar {
+    display: none;
+}
+
+* {
+    outline: none;
+    user-select: none;
+    scrollbar-width: 0px;
+    -webkit-tap-highlight-color: transparent;
 }
